# rebol-clone-glm-5.2

./: BENCHMARKS.md  Cargo.toml  Justfile  KNOWN_ISSUES.md  LICENSE  README.md  architecture.md  fib.py  fib2.py  parse_backed_semantic_types.md  plan.md  plan11-functional-gaps.md  plan12-control-flow.md  plan13-feature-parity.md  plan14-duration.md  plan15-decimal-type.md  plan2.md  plan3.md  plan4.md  plan5.md  plan6-closures-modules.md  plan6-reactivity.md  plan7-concurrency.md  plan8-missing-types.md  project-brief.md  rust-networking-protocol-crate-recommendation.md
.cargo/: config.toml
crates/red-cli/: Cargo.toml
crates/red-cli/src/: main.rs  repl.rs
crates/red-cli/tests/: cli.rs  examples.rs
crates/red-core/: Cargo.toml
crates/red-core/src/: context.rs  env.rs  error.rs  lexer.rs  lib.rs  parser.rs  printer.rs  source.rs  value.rs  vm_ir.rs
crates/red-core/tests/: property.proptest-regressions  property.rs  round_trip.rs
crates/red-core/tests/common/: mod.rs
crates/red-core/tests/golden/: binary.expected  binary.red  char.expected  comments.red  date.expected  date.red  duration.expected  duration.red  email.expected  empty.red  file_quoted.red  files.expected  header.expected  issue.red  literals.red  mixed.red  module_literal.expected  module_literal.red  money.expected  money.red  nested.expected  pair_tuple.red  parens.red  paths.expected  paths.red  percent.expected  setword.expected  strings.expected  strings.red  tag.red  url.red  words.red
crates/red-eval/: Cargo.toml
crates/red-eval/benches/: README.md  eval.rs
crates/red-eval/benches/programs/: ackermann.red  ackermann_small.red  block_build.red  closure_heavy.red  fib.red  foreach_block.red  func_call_heavy.red  parse_heavy.red  string_concat.red  sum_loop.red  sum_while.red
crates/red-eval/src/: binding.rs  bitset.rs  build.rs  codec.rs  context.rs  convert.rs  hash.rs  html.rs  image.rs  interp.rs  interp_legacy.rs  interp_runner.rs  interp_walker.rs  io.rs  json.rs  lib.rs  map.rs  math.rs  module.rs  natives.rs  object.rs  parse.rs  path.rs  query.rs  reflection.rs  semantic.rs  series.rs  stdlib.rs  strings.rs  typeset.rs  vector.rs
crates/red-eval/src/natives/: compare.rs  control.rs  eval.rs  func.rs  io.rs  mod.rs  registry.rs  test.rs  words.rs
crates/red-eval/src/net/: error.rs  http.rs  mod.rs  protocol.rs  request.rs  response.rs
crates/red-eval/src/vm/: compiler.rs  frame.rs  ir.rs  jit.rs  lex.rs  mod.rs  pool.rs  vm.rs
crates/red-eval/stdlib/: stdlib.red
crates/red-eval/tests/: bench_fixtures.rs  disasm_tests.rs  parity.rs  programs.rs  programs_errors.rs  property.proptest-regressions  property.rs  unset_on_unbound.rs
crates/red-eval/tests/common/: mod.rs
crates/red-eval/tests/disasm/: func_tail.disasm.expected  func_tail.red  if_form.disasm.expected  if_form.red  literal.disasm.expected  literal.red  needs_rebind.red  refinement.disasm.expected  refinement.red
crates/red-eval/tests/programs/: README.md  all_any.expected  all_any.red  all_any_short_circuit.expected  all_any_short_circuit.red  arith.expected  arith.red  assignment.expected  assignment.red  binary_convert.expected  binary_convert.red  binary_io.expected  binary_io.red  binary_literal.expected  binary_literal.red  binary_series.expected  binary_series.red  bind.red  bitset_construct.expected  bitset_construct.red  bitset_ops.expected  bitset_ops.red  braced_string.expected  braced_string.red  case.expected  case.red  case_all.expected  case_all.red  change_dir.expected  change_dir.red  char_arith.expected  char_arith.red  char_literal.expected  char_literal.red  char_pick.expected  char_pick.red  char_poke.expected  char_poke.red  charset_basic.expected  charset_basic.red  (+333 more)
crates/red-eval/tests/programs_errors/: arity_error.expected  arity_error.red  bad_date.expected  bad_date.red  bad_zone.red  binary_bad_hex.expected  binary_bad_hex.red  bind_errors.expected  bind_errors.red  bind_non_block.expected  bind_non_block.red  bind_unbound.red  cause_error.expected  cause_error.red  cause_error_4arg.expected  cause_error_4arg.red  cause_error_bad_type.expected  cause_error_bad_type.red  cause_error_extra.expected  cause_error_extra.red  char_bad_escape.expected  char_bad_escape.red  closure_arity.expected  closure_arity.red  closure_unbound_capture.expected  closure_unbound_capture.red  decimal_errors.expected  decimal_errors.red  div_by_zero.red  duration_bad_literal.expected  duration_bad_literal.red  duration_compound_bad.expected  duration_compound_bad.red  duration_strict_arith.expected  duration_strict_arith.red  email_bad_form.expected  email_bad_form.red  empty_series.expected  empty_series.red  error_missing_message.expected  (+74 more)
docs/plans/: future-plan-concurrency.md  future-plan-lsp.md  future-plan-package-manager.md  future-plan-parse_backed_semantic_types.md  future-plan-reactivity.md  plan.md  plan10-unit-testing.md  plan11-functional-gaps.md  plan12-control-flow.md  plan13-feature-parity.md  plan14-duration.md  plan15-decimal-type.md  plan16-red-by-example-gaps.md  plan17-dialects.md  plan18-semantic-types.md  plan2.md  plan3.md  plan4.md  plan5.md  plan6-closures-modules.md  plan8-missing-types.md  plan9-modern-types.md
examples/: arith.red  assign.red  binary.red  blocks.red  build.red  calculator.red  char.red  closures.red  compose.red  conditionals.red  conversions.red  counter-module.red  dates.red  dir.red  env.red  errors.red  fib-tco.red  fib.red  fib2.red  file-import.red  file-io.red  filter.red  foreach.red  func.red  higher-order.red  html.red  json.red  lookup.red  loops.red  map.red  maps.red  math.red  modules.red  mutation.red  pair-tuple.red  parse-csv.red  parse.red  probe.red  query.red  read-lines.red  (+15 more)
examples/modules/: counter.red  main.red  mathutils.red  stringutils.red  tree.red
fuzz/: Cargo.toml
fuzz/fuzz_targets/: run_source.rs  run_source_vm.rs
