[package]
name = "red-core"
version = "0.10.0"
edition = "2021"

[features]
# Optional interpreter instrumentation: `Env::max_frame_depth` (call-stack
# high-water mark) and `Env::instr_count` (eval-loop iteration counter).
# Zero-cost in release builds when off; the v0.3 VM milestones use these to
# prove tail-call stack bounds and correlate VM-vs-walker instr counts.
stats = []
# Force the tree-walker (`EvalMode::Walk`) as the default evaluator instead of
# the bytecode VM. Used for the M29 golden-parity baseline run
# (`cargo test --workspace --features force-walk`) and for debugging VM
# divergences. Off in normal builds (the VM is the default since M29).
force-walk = []

[dependencies]
indexmap = "2"
# M45: `chrono` for the `date!`/`time!`/`now` types. `clock` enables `Local`
# (system TZ + offset) for `now`; no `std`/`wasmbind`/`alloc` features needed.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# M150: `rust_decimal` for the `decimal!` value type (28-digit precision,
# 96-bit mantissa, no NaN/Inf). Pure-Rust, no native deps. Used for exact
# fixed-decimal arithmetic where `float!` (f64) rounding surprises.
rust_decimal = "1.36"

[dev-dependencies]
proptest = "1"
