[package]
name = "red-eval"
version = "0.2.0"
edition = "2021"

[features]
# Re-export of `red-core/stats`: gates `Env::max_frame_depth` /
# `Env::instr_count` instrumentation used by the v0.3 VM benchmarks and
# parity tests. Off by default so release builds pay zero cost.
stats = ["red-core/stats"]
# Force the tree-walker as the default evaluator (re-export of
# `red-core/force-walk`). Used by the M29 parity harness to run the entire
# test suite in `Walk` mode for byte-for-byte comparison with the VM-default
# run: `cargo test --workspace --features force-walk`.
force-walk = ["red-core/force-walk"]
# Cranelift JIT compilation of hot function bodies (v0.4). When enabled,
# functions that exceed a call-count threshold are compiled to native
# machine code via Cranelift. Integer-only specialization: falls back to
# the bytecode interpreter for non-Integer values or unsupported instrs.
# Off by default — adds ~2-3 MiB to the binary via the cranelift crates.
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
    "red-core/jit",
]

[dependencies]
red-core = { path = "../red-core" }
ureq = "2"
cranelift-codegen = { version = "0.133", optional = true }
cranelift-frontend = { version = "0.133", optional = true }
cranelift-jit = { version = "0.133", optional = true }
cranelift-module = { version = "0.133", optional = true }
cranelift-native = { version = "0.133", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "eval"
harness = false
