[package]
name = "red-eval"
version = "0.5.0"
edition = "2021"

[features]
# Re-export of `red-core/stats`: gates `Env::max_frame_depth` /
# `Env::instr_count` instrumentation used by the v0.3 VM benchmarks and
# parity tests. Off by default so release builds pay zero cost.
stats = ["red-core/stats"]
# Force the tree-walker as the default evaluator (re-export of
# `red-core/force-walk`). Used by the M29 parity harness to run the entire
# test suite in `Walk` mode for byte-for-byte comparison with the VM-default
# run: `cargo test --workspace --features force-walk`.
force-walk = ["red-core/force-walk"]

[dependencies]
red-core = { path = "../red-core" }
ureq = "2"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
proptest = "1"

[[bench]]
name = "eval"
harness = false
